fix saison/equipe + double scroll

--- a/src/sass/_alexd.scss
+++ b/src/sass/_alexd.scss
@@ -16,8 +16,17 @@ body {
 #TableSelect {
     position: absolute;
     left: 0px;
-    overflow: scroll;
+    overflow: auto;
     height: 200px;
+    width: 500px;
+    margin-right: 30px;
+}
+#TableSaison {
+    position: absolute;
+    left: 0px;
+    overflow: auto;
+    height: 200px;
+    width: 200px;
     margin-right: 30px;
 }
 #nouvSaison {
